refacto + add mail feature
add some documentation

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules/
 /test-results/
 /playwright-report/
 /playwright/.cache/
+snapshots
+result.json
+logs.txt
+src/config/mail.json
+.vscode/settings.json
