--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trackflightprice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "node index.js",
     "format": "prettier --write \"src/**/*js\"",
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "playwright": "^1.22.2"
   }
 }
